[gd_scene load_steps=10 format=3 uid="uid://l2rihofdinop"]

[ext_resource type="Script" uid="uid://cwkrmjm1vqt1s" path="res://scripts/menu_locations.gd" id="1_rpxht"]
[ext_resource type="Texture2D" uid="uid://dbpd1qitj8nym" path="res://img/garaje.png" id="2_cag3g"]
[ext_resource type="Script" uid="uid://dp4axmnl7q35n" path="res://scripts/charac_info.gd" id="3_2sov7"]
[ext_resource type="Texture2D" uid="uid://dc55fkjdrreyr" path="res://img/escenario1.jpg" id="4_qteu3"]
[ext_resource type="Texture2D" uid="uid://ba5lfy7iobrin" path="res://img/escenario2.jpg" id="5_27gp1"]
[ext_resource type="PackedScene" uid="uid://8rdlqav878pv" path="res://scenes/main_node.tscn" id="6_gppnv"]

[sub_resource type="Resource" id="Resource_gppnv"]
script = ExtResource("3_2sov7")
key = "0"
img = ExtResource("2_cag3g")
metadata/_custom_type_script = "uid://dp4axmnl7q35n"

[sub_resource type="Resource" id="Resource_cag3g"]
script = ExtResource("3_2sov7")
key = "1"
img = ExtResource("4_qteu3")
metadata/_custom_type_script = "uid://dp4axmnl7q35n"

[sub_resource type="Resource" id="Resource_2sov7"]
script = ExtResource("3_2sov7")
key = "2"
img = ExtResource("5_27gp1")
metadata/_custom_type_script = "uid://dp4axmnl7q35n"

[node name="menu_locations" type="Node2D"]
script = ExtResource("1_rpxht")
background_data = Array[ExtResource("3_2sov7")]([SubResource("Resource_gppnv"), SubResource("Resource_cag3g"), SubResource("Resource_2sov7")])
background_scene = ExtResource("6_gppnv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUpgrades" type="PanelContainer" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 122.0
offset_right = 1694.0
offset_bottom = 1046.0
scale = Vector2(0.995755, 0.913314)
metadata/_edit_use_anchors_ = true

[node name="MarginUpgrades" type="MarginContainer" parent="CanvasLayer/MenuUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridUpgrades" type="GridContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades"]
layout_mode = 2
columns = 2

[node name="MarginImg1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg1"]
layout_mode = 2
texture = ExtResource("4_qteu3")
expand_mode = 3
stretch_mode = 5

[node name="MarginImg2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg2"]
layout_mode = 2
texture = ExtResource("5_27gp1")
stretch_mode = 5

[node name="MaginText1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText1"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaginText2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginButton1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button1" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[node name="MarginButton2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button2" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[node name="Panel_close_button" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -291.0
offset_top = 128.0
offset_right = -241.0
offset_bottom = 178.0
grow_horizontal = 0

[node name="Button_close" type="Button" parent="CanvasLayer/Panel_close_button"]
layout_mode = 2
text = "x"

[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel_close_button/Button_close" to="." method="_on_button_close_pressed"]
